# aleph_alpha_prompt_engineering_toolkit

./: .gitignore  README.md  env-template  pyproject.toml
prompt_engineer/: run.py  utils.py
prompts/extraction/: 1.j2
