[tool.poetry]
name = "prompt-engineer"
version = "0.1.0"
description = ""
authors = ["Marc Mezger <marc.mezger@gmail.com>"]
readme = "README.md"
packages = [{include = "prompt_engineer"}]

[tool.poetry.dependencies]
python = "^3.11"
aleph-alpha-client = "^3.1.4"
langchain = "^0.0.221"
wandb = "^0.15.4"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
